# ambition-rs

./: .gitignore  Cargo.toml  Makefile  README.md
src/: main.rs
templates/: index.html
