[package]
name = "ambition"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tracing-subscriber = "0.3.19"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
rusqlite = { version = "0.33.0", features = ["bundled"] }
chrono = "0.4.39"
minijinja = "1.0.10"
tokio-cron-scheduler = "0.9.4"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-feature=+crt-static"]