[package]
name = "ambition"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
tracing-subscriber = "0.3.19"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
rusqlite = { version = "0.35.0", features = ["bundled"] }
chrono = "0.4.40"
minijinja = "2.9.0"
tokio-cron-scheduler = "0.13.0"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-feature=+crt-static"]